--- a/Session_15_Traders_Trade_part_2.ipynb
+++ b/Session_15_Traders_Trade_part_2.ipynb
@@ -9,7 +9,7 @@
         "wp0VWkylOKr9",
         "BkX5GqjSnAu0"
       ],
-      "authorship_tag": "ABX9TyM+ay7ou8Rc88BKG8j1ydTI",
+      "authorship_tag": "ABX9TyMt1/a0CIsXL1y2kp3nlWX/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,7 +63,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fb08a86e-05b0-4a74-9a34-8257c2b109aa"
+        "outputId": "9ea10ac6-dd74-4f3f-c2c3-e2ec02921bd5"
       },
       "execution_count": 1,
       "outputs": [
@@ -72,8 +72,8 @@
           "name": "stdout",
           "text": [
             "Mounted at /content/drive\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m26.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m66.4/66.4 KB\u001b[0m \u001b[31m3.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m17.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m66.4/66.4 kB\u001b[0m \u001b[31m4.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h"
           ]
         }
@@ -310,14 +310,14 @@
         "\n",
         "    return (self.sugar <= 0) or (self.spice <= 0)\n",
         "\n",
-        "  def calculate_MRS(self):\n",
+        "  def calculate_MRS(self, sugar, spice):\n",
         "    '''\n",
         "    Helper function for self.trade()\n",
         "\n",
         "    Determines what trader agent is needs and can give up\n",
         "    '''\n",
         "\n",
-        "    return (self.spice/self.metabolism_spice) / (self.sugar/self.metabolism_sugar)\n",
+        "    return (spice/self.metabolism_spice) / (sugar/self.metabolism_sugar)\n",
         "  \n",
         "  \n",
         "  def trade(self, other):\n",
@@ -334,8 +334,8 @@
         "    assert other.spice > 0\n",
         "  \n",
         "    # calculate marginal rate of subsitution in Growing Artificial Socieites p. 101\n",
-        "    mrs_self = self.calculate_MRS()\n",
-        "    mrs_other = other.calculate_MRS()\n",
+        "    mrs_self = self.calculate_MRS(self.sugar, self.spice)\n",
+        "    mrs_other = other.calculate_MRS(other.sugar, other.spice)\n",
         "\n",
         "    if math.isclose(mrs_self, mrs_other, rel_tol=1e-02): \n",
         "      return\n",
@@ -449,7 +449,7 @@
       "metadata": {
         "id": "t51BNfwUnt53"
       },
-      "execution_count": 8,
+      "execution_count": 5,
       "outputs": []
     },
     {
