--- a/Session_16_Traders_Trade_part_3.ipynb
+++ b/Session_16_Traders_Trade_part_3.ipynb
@@ -9,7 +9,7 @@
         "wp0VWkylOKr9",
         "BkX5GqjSnAu0"
       ],
-      "authorship_tag": "ABX9TyNullvg/Djpzcf+BgsivADu",
+      "authorship_tag": "ABX9TyPvuu/5h81192HHvmp7IPUU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,7 +63,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1da30d07-fe07-4283-dad1-a4d417751743"
+        "outputId": "4b155efe-8e9e-4c72-d7f0-31e78e6f1cbe"
       },
       "execution_count": 1,
       "outputs": [
@@ -72,8 +72,8 @@
           "name": "stdout",
           "text": [
             "Mounted at /content/drive\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m26.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m66.4/66.4 KB\u001b[0m \u001b[31m4.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m16.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m66.4/66.4 kB\u001b[0m \u001b[31m3.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h"
           ]
         }
@@ -304,14 +304,16 @@
         "\n",
         "    return (self.sugar <= 0) or (self.spice <= 0)\n",
         "\n",
-        "  def calculate_MRS(self):\n",
+        "  def calculate_MRS(self, sugar, spice):\n",
         "    '''\n",
-        "    Helper function for self.trade()\n",
+        "    Helper function for\n",
+        "    - self.trade()\n",
+        "    - maybe_sell_spice\n",
         "\n",
         "    Determines what trader agent is needs and can give up\n",
         "    '''\n",
         "\n",
-        "    return (self.spice/self.metabolism_spice) / (self.sugar/self.metabolism_sugar)\n",
+        "    return (spice/self.metabolism_spice) / (sugar/self.metabolism_sugar)\n",
         "  \n",
         "  def calculate_sell_spice_amount(self, price):\n",
         "    '''\n",
@@ -355,7 +357,9 @@
         "        (welfare_other < other.calculate_welfare(other_sugar, other_spice)))\n",
         "    \n",
         "    # trade criteria #2 is their mrs crossing\n",
-        "    mrs_not_crossing = self.calculate_MRS() > other.calculate_MRS()\n",
+        "    mrs_not_crossing = self.calculate_MRS(self_sugar, self_spice\n",
+        "                                          ) > other.calculate_MRS(\n",
+        "                                              other_sugar, other_spice)\n",
         "\n",
         "    print(both_agents_better_off, mrs_not_crossing)\n",
         "  \n",
@@ -374,8 +378,8 @@
         "    assert other.spice > 0\n",
         "  \n",
         "    # calculate marginal rate of subsitution in Growing Artificial Socieites p. 101\n",
-        "    mrs_self = self.calculate_MRS()\n",
-        "    mrs_other = other.calculate_MRS()\n",
+        "    mrs_self = self.calculate_MRS(self.sugar, self.spice)\n",
+        "    mrs_other = other.calculate_MRS(other.sugar, other.spice)\n",
         "\n",
         "    #calculate each agents welfare\n",
         "    welfare_self = self.calculate_welfare(self.sugar, self.spice)\n",
@@ -496,7 +500,7 @@
       "metadata": {
         "id": "t51BNfwUnt53"
       },
-      "execution_count": 5,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -637,7 +641,7 @@
       "metadata": {
         "id": "7DTonjahn2BT"
       },
-      "execution_count": 6,
+      "execution_count": 10,
       "outputs": []
     },
     {
