--- a/Session_17_Traders_Trade_part_4.ipynb
+++ b/Session_17_Traders_Trade_part_4.ipynb
@@ -9,7 +9,7 @@
         "wp0VWkylOKr9",
         "BkX5GqjSnAu0"
       ],
-      "authorship_tag": "ABX9TyPxPph0SxqG7otZ/YG4ViU/",
+      "authorship_tag": "ABX9TyMAj4RMcFU2UcCNjXZD6f+P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,17 +63,17 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cb8afba6-998a-42a4-c494-98cb858af7b5"
+        "outputId": "f9853f2d-0fe1-42ba-9df5-b791a8eb41f1"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Mounted at /content/drive\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m16.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m66.4/66.4 KB\u001b[0m \u001b[31m3.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m23.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m66.4/66.4 kB\u001b[0m \u001b[31m8.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h"
           ]
         }
@@ -107,7 +107,7 @@
       "metadata": {
         "id": "kg-JVcwzON_b"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -146,7 +146,7 @@
       "metadata": {
         "id": "o1EOk5KMnC55"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -175,7 +175,7 @@
       "metadata": {
         "id": "-oJ35Mx7nXmK"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -306,14 +306,16 @@
         "\n",
         "    return (self.sugar <= 0) or (self.spice <= 0)\n",
         "\n",
-        "  def calculate_MRS(self):\n",
+        "  def calculate_MRS(self, sugar, spice):\n",
         "    '''\n",
-        "    Helper function for self.trade()\n",
+        "    Helper function for \n",
+        "    - self.trade()\n",
+        "    - self.maybe_sell_spice()\n",
         "\n",
         "    Determines what trader agent is needs and can give up\n",
         "    '''\n",
         "\n",
-        "    return (self.spice/self.metabolism_spice) / (self.sugar/self.metabolism_sugar)\n",
+        "    return (spice/self.metabolism_spice) / (sugar/self.metabolism_sugar)\n",
         "  \n",
         "  def calculate_sell_spice_amount(self, price):\n",
         "    '''\n",
@@ -369,7 +371,10 @@
         "        (welfare_other < other.calculate_welfare(other_sugar, other_spice)))\n",
         "    \n",
         "    # trade criteria #2 is their mrs crossing\n",
-        "    mrs_not_crossing = self.calculate_MRS() > other.calculate_MRS()\n",
+        "    mrs_not_crossing = self.calculate_MRS(self_sugar, self_spice\n",
+        "                                          ) > other.calculate_MRS(\n",
+        "                                              other_sugar, other_spice\n",
+        "                                          )\n",
         "\n",
         "    if not (both_agents_better_off and mrs_not_crossing):\n",
         "      return False\n",
@@ -394,8 +399,8 @@
         "    assert other.spice > 0\n",
         "  \n",
         "    # calculate marginal rate of subsitution in Growing Artificial Socieites p. 101\n",
-        "    mrs_self = self.calculate_MRS()\n",
-        "    mrs_other = other.calculate_MRS()\n",
+        "    mrs_self = self.calculate_MRS(self.sugar, self.spice)\n",
+        "    mrs_other = other.calculate_MRS(other.sugar, other.spice)\n",
         "\n",
         "    #calculate each agents welfare\n",
         "    welfare_self = self.calculate_welfare(self.sugar, self.spice)\n",
@@ -533,7 +538,7 @@
       "metadata": {
         "id": "t51BNfwUnt53"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -677,7 +682,7 @@
       "metadata": {
         "id": "7DTonjahn2BT"
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": []
     },
     {
