--- a/Session_6_Agentize_The_Landscape_part_2.ipynb
+++ b/Session_6_Agentize_The_Landscape_part_2.ipynb
@@ -23,28 +23,13 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "background_save": true,
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ikSl2Mz0m252",
-        "outputId": "21ac7143-46fe-4643-b0c5-3fbb80b26ef1"
+        "id": "ikSl2Mz0m252"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m22.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m66.4/66.4 KB\u001b[0m \u001b[31m3.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "try: \n",
+        "try:\n",
         "  import mesa\n",
-        "except: \n",
+        "except:\n",
         "  !pip install mesa --quiet\n",
         "import mesa\n",
         "import numpy as np\n",
@@ -73,12 +58,12 @@
       "source": [
         "class Sugar(mesa.Agent):\n",
         "  \"\"\"\n",
-        "  Sugar: \n",
+        "  Sugar:\n",
         "  - contains an amount of sugar\n",
-        "  - grows 1 amount of sugar at each turn \n",
+        "  - grows 1 amount of sugar at each turn\n",
         "  \"\"\"\n",
         "\n",
-        "  def __init__(self, unique_id, model, pos, max_sugar): \n",
+        "  def __init__(self, unique_id, model, pos, max_sugar):\n",
         "    super().__init__(unique_id, model)\n",
         "    self.pos = pos\n",
         "    self.amount = max_sugar\n",
@@ -95,7 +80,7 @@
       "source": [
         "class Spice(mesa.Agent):\n",
         "  \"\"\"\n",
-        "  Spice: \n",
+        "  Spice:\n",
         "  - contains an amount of spice\n",
         "  - grows 1 amount of spice at each turn\n",
         "  \"\"\"\n",
@@ -105,7 +90,7 @@
         "    self.pos = pos\n",
         "    self.amount = max_spice\n",
         "    self.max_spice = max_spice\n",
-        "  "
+        ""
       ]
     },
     {
@@ -125,18 +110,18 @@
       },
       "outputs": [],
       "source": [
-        "class Trader(mesa.Agent): \n",
+        "class Trader(mesa.Agent):\n",
         "  \"\"\"\n",
-        "  Trader: \n",
+        "  Trader:\n",
         "  - has a metabolism of sugar and spice\n",
         "  - harvest and trade sugar and spice to survive\n",
         "  \"\"\"\n",
         "\n",
         "\n",
         "  def __init__(self):\n",
-        "    \n",
+        "\n",
         "    print(\"I am Trader\")\n",
-        " \n"
+        "\n"
       ]
     },
     {
@@ -160,40 +145,44 @@
         "  \"\"\"\n",
         "  Manager class to run Sugarscape with Traders\n",
         "  \"\"\"\n",
-        "  \n",
-        "  \n",
-        "  def __init__(self, width=50,height=50):\n",
-        "    \n",
+        "\n",
+        "\n",
+        "  def __init__(self, width=50,height=50, seed =3):\n",
+        "    super().__init__()\n",
         "    #Initiate width and heigh of sugarscape\n",
         "    self.width = width\n",
-        "    self.height = height \n",
-        "    \n",
+        "    self.height = height\n",
+        "    self._seed = seed\n",
+        "    print(self._seed)\n",
+        "\n",
+        "\n",
+        "\n",
         "    #initiate activation schedule\n",
-        "    self.schedule = mesa.time.RandomActivationByType(self)    \n",
+        "    self.schedule = mesa.time.RandomActivationByType(self)\n",
         "    #initiate mesa grid class\n",
         "    self.grid = mesa.space.MultiGrid(self.width, self.height, torus=False)\n",
         "\n",
-        "    #read in landscape file from supplmentary material \n",
+        "    #read in landscape file from supplmentary material\n",
         "    sugar_distribution =np.genfromtxt(\"sugar-map.txt\")\n",
         "    spice_distribution = np.flip(sugar_distribution, 1)\n",
-        "    \n",
+        "\n",
         "    agent_id = 0\n",
-        "    for _,x,y in self.grid.coord_iter():\n",
+        "    for _,(x,y) in self.grid.coord_iter():\n",
         "      max_sugar = sugar_distribution[x,y]\n",
-        "      if max_sugar > 0: \n",
+        "      if max_sugar > 0:\n",
         "        sugar = Sugar(agent_id, self, (x,y), max_sugar)\n",
         "        self.schedule.add(sugar)\n",
         "        self.grid.place_agent(sugar, (x,y))\n",
-        "        print(self.schedule.agents_by_type[Sugar][agent_id])\n",
+        "        #print(self.schedule.agents_by_type[Sugar][agent_id])\n",
         "        agent_id += 1\n",
-        "    \n",
+        "\n",
         "      max_spice = spice_distribution[x,y]\n",
-        "      if max_spice > 0: \n",
+        "      if max_spice > 0:\n",
         "        spice = Spice(agent_id, self, (x,y), max_spice)\n",
         "        self.schedule.add(spice)\n",
         "        self.grid.place_agent(spice, (x,y))\n",
-        "        print(self.schedule.agents_by_type[Spice][agent_id])\n",
-        "        agent_id += 1    \n",
+        "        #print(self.schedule.agents_by_type[Spice][agent_id])\n",
+        "        agent_id += 1\n",
         "\n"
       ]
     },
@@ -220,12 +209,109 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "model2 = SugarscapeG1mt()"
+      ],
+      "metadata": {
+        "id": "giuCZ1gWF0M0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "try1 = model.random.getstate()\n",
+        "try2 = model2.random.getstate()\n",
+        "\n",
+        "try1==try2"
+      ],
+      "metadata": {
+        "id": "ypCIkKT7yweV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.__dict__"
+      ],
+      "metadata": {
+        "id": "PrhA9N40Cofp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "try1 == try2"
+      ],
+      "metadata": {
+        "id": "EEUToVtkDfIU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "\n",
+        "random.seed(3)\n",
+        "\n",
+        "try1 = random.getstate()\n"
+      ],
+      "metadata": {
+        "id": "6FTTPaapEB0R"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "random.seed(3)\n",
+        "\n",
+        "try2 = random.getstate()"
+      ],
+      "metadata": {
+        "id": "Hse08WHsFold"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "try1 == try2"
+      ],
+      "metadata": {
+        "id": "USGhpk0LFsVH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "vemquyVptT3Z"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "help(model.random)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "lC67ZnwRxI_r"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
