--- a/Session_8_Sugar_and_Spice_Step_Functions.ipynb
+++ b/Session_8_Sugar_and_Spice_Step_Functions.ipynb
@@ -23,32 +23,17 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ikSl2Mz0m252",
-        "outputId": "2e87b7b5-12ab-4ed4-dcca-50d8639c7b00"
+        "id": "ikSl2Mz0m252"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Mounted at /content/drive\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m20.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m66.4/66.4 KB\u001b[0m \u001b[31m3.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
         "\n",
         "\n",
-        "try: \n",
+        "try:\n",
         "  import mesa\n",
-        "except: \n",
+        "except:\n",
         "  !pip install mesa --quiet\n",
         "import mesa\n",
         "import numpy as np\n",
@@ -77,12 +62,12 @@
       "source": [
         "class Sugar(mesa.Agent):\n",
         "  \"\"\"\n",
-        "  Sugar: \n",
+        "  Sugar:\n",
         "  - contains an amount of sugar\n",
-        "  - grows 1 amount of sugar at each turn \n",
+        "  - grows 1 amount of sugar at each turn\n",
         "  \"\"\"\n",
         "\n",
-        "  def __init__(self, unique_id, model, pos, max_sugar): \n",
+        "  def __init__(self, unique_id, model, pos, max_sugar):\n",
         "    super().__init__(unique_id, model)\n",
         "    self.pos = pos\n",
         "    self.amount = max_sugar\n",
@@ -107,7 +92,7 @@
       "source": [
         "class Spice(mesa.Agent):\n",
         "  \"\"\"\n",
-        "  Spice: \n",
+        "  Spice:\n",
         "  - contains an amount of spice\n",
         "  - grows 1 amount of spice at each turn\n",
         "  \"\"\"\n",
@@ -117,8 +102,8 @@
         "    self.pos = pos\n",
         "    self.amount = max_spice\n",
         "    self.max_spice = max_spice\n",
-        "  \n",
-        "  def step(self): \n",
+        "\n",
+        "  def step(self):\n",
         "    '''\n",
         "    Spice growth function, adds one unit of spice each step until\n",
         "    max amout\n",
@@ -143,16 +128,16 @@
       },
       "outputs": [],
       "source": [
-        "class Trader(mesa.Agent): \n",
+        "class Trader(mesa.Agent):\n",
         "  \"\"\"\n",
-        "  Trader: \n",
+        "  Trader:\n",
         "  - has a metabolism of sugar and spice\n",
         "  - harvest and trade sugar and spice to survive\n",
         "  \"\"\"\n",
         "\n",
         "\n",
-        "  def __init__(self, unique_id, model, pos, moore=False, sugar=0, \n",
-        "               spice=0, metabolism_sugar=0, metabolism_spice=0, \n",
+        "  def __init__(self, unique_id, model, pos, moore=False, sugar=0,\n",
+        "               spice=0, metabolism_sugar=0, metabolism_spice=0,\n",
         "               vision=0):\n",
         "    super().__init__(unique_id, model)\n",
         "    self.pos = pos\n",
@@ -162,7 +147,7 @@
         "    self.metabolism_sugar = metabolism_sugar\n",
         "    self.metabolism_spice = metabolism_spice\n",
         "    self.vision = vision\n",
-        " \n"
+        "\n"
       ]
     },
     {
@@ -186,15 +171,15 @@
         "  \"\"\"\n",
         "  Manager class to run Sugarscape with Traders\n",
         "  \"\"\"\n",
-        "  \n",
-        "  \n",
+        "\n",
+        "\n",
         "  def __init__(self, width=50,height=50, initial_population=200,\n",
         "               endowment_min=25, endowment_max=50, metabolism_min=1,\n",
         "               metabolism_max=5, vision_min=1, vision_max=5):\n",
-        "    \n",
+        "\n",
         "    #Initiate width and heigh of sugarscape\n",
         "    self.width = width\n",
-        "    self.height = height \n",
+        "    self.height = height\n",
         "    #Initiate population attributes\n",
         "    self.initial_population = initial_population\n",
         "    self.endowment_min = endowment_min\n",
@@ -205,29 +190,29 @@
         "    self.vision_max = vision_max\n",
         "\n",
         "    #initiate activation schedule\n",
-        "    self.schedule = mesa.time.RandomActivationByType(self)    \n",
+        "    self.schedule = mesa.time.RandomActivationByType(self)\n",
         "    #initiate mesa grid class\n",
         "    self.grid = mesa.space.MultiGrid(self.width, self.height, torus=False)\n",
         "\n",
-        "    #read in landscape file from supplmentary material \n",
+        "    #read in landscape file from supplmentary material\n",
         "    sugar_distribution =np.genfromtxt(\"/content/drive/MyDrive/sugar-map.txt\")\n",
         "    spice_distribution = np.flip(sugar_distribution, 1)\n",
-        "    \n",
+        "\n",
         "    agent_id = 0\n",
-        "    for _,x,y in self.grid.coord_iter():\n",
+        "    for _,(x,y) in self.grid.coord_iter():\n",
         "      max_sugar = sugar_distribution[x,y]\n",
-        "      if max_sugar > 0: \n",
+        "      if max_sugar > 0:\n",
         "        sugar = Sugar(agent_id, self, (x,y), max_sugar)\n",
         "        self.schedule.add(sugar)\n",
         "        self.grid.place_agent(sugar, (x,y))\n",
         "        agent_id += 1\n",
-        "    \n",
+        "\n",
         "      max_spice = spice_distribution[x,y]\n",
-        "      if max_spice > 0: \n",
+        "      if max_spice > 0:\n",
         "        spice = Spice(agent_id, self, (x,y), max_spice)\n",
         "        self.schedule.add(spice)\n",
         "        self.grid.place_agent(spice, (x,y))\n",
-        "        agent_id += 1    \n",
+        "        agent_id += 1\n",
         "\n",
         "    for i in range(self.initial_population):\n",
         "      #get agent position\n",
@@ -243,14 +228,14 @@
         "      #give agents vision\n",
         "      vision = int(self.random.uniform(self.vision_min, self.vision_max+1))\n",
         "      #create Trader object\n",
-        "      trader = Trader(agent_id, \n",
+        "      trader = Trader(agent_id,\n",
         "                      self,\n",
         "                      (x,y),\n",
-        "                      moore = False, \n",
-        "                      sugar = sugar, \n",
-        "                      spice = spice, \n",
-        "                      metabolism_sugar = metabolism_sugar, \n",
-        "                      metabolism_spice = metabolism_spice, \n",
+        "                      moore = False,\n",
+        "                      sugar = sugar,\n",
+        "                      spice = spice,\n",
+        "                      metabolism_sugar = metabolism_sugar,\n",
+        "                      metabolism_spice = metabolism_spice,\n",
         "                      vision = vision)\n",
         "      #place agent\n",
         "      self.grid.place_agent(trader, (x,y))\n",
@@ -261,13 +246,13 @@
         "    '''\n",
         "    Unique step function that does staged activation of sugar and spice\n",
         "    and then randomly activates traders\n",
-        "    '''    \n",
+        "    '''\n",
         "    # step Sugar agents\n",
-        "    for sugar in self.schedule.agents_by_type[Sugar].values(): \n",
+        "    for sugar in self.schedule.agents_by_type[Sugar].values():\n",
         "      sugar.step()\n",
-        "    \n",
+        "\n",
         "    # step Spice agents\n",
-        "    for spice in self.schedule.agents_by_type[Spice].values(): \n",
+        "    for spice in self.schedule.agents_by_type[Spice].values():\n",
         "      spice.step()\n",
         "\n",
         "    self.schedule.steps += 1 #important for data collector to track number of steps\n",
@@ -292,25 +277,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "at455urSol7b",
-        "outputId": "8290bfc6-8705-410b-ce56-877773fa63d1"
+        "id": "at455urSol7b"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "0\n",
-            "1\n",
-            "2\n",
-            "3\n",
-            "4\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "model = SugarscapeG1mt()\n",
         "model.run_model(step_count=5)\n"
@@ -329,8 +298,7 @@
   "metadata": {
     "colab": {
       "collapsed_sections": [
-        "XAnII-29m3r2",
-        "wp0VWkylOKr9"
+        "XAnII-29m3r2"
       ],
       "provenance": [],
       "include_colab_link": true
